# leia-rust

./: Cargo.toml  README.md
compute-oracle/: Cargo.toml
compute-oracle/src/: lib.rs  main.rs
