[package]
name = "leia_compute_oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "compute_oracle"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.2", features = ["derive"] }
lazy_static = "^1.4"
uuid = { version = "^1.3", features = ["v4"] }
